nlamah/src/main/resources/org/nlamah/QL/test/qls/error/doubledeclarationerror.ql
form test
{
	question1 text "test"
}